--- a/scss/style.scss
+++ b/scss/style.scss
@@ -143,7 +143,9 @@ body{
                     } 
 
                     .active{
-                        color: #fff;
+                        a{
+                            color: #fff;
+                        }
 
                         &:before{
                             position: absolute;
@@ -181,12 +183,12 @@ body{
 
                         a{
                             text-decoration: none;
-                            color: #a4a4a4;
                             font-family: "Raleway", sans-serif;
                             font-size: 18px;
                             font-weight: 400;
                             text-transform: uppercase;
                             transition: all .3s ease;
+                            color: #a4a4a4;
 
                             &:hover{
                                 color: #fff;
