--- a/GiftShop/scss/style.scss
+++ b/GiftShop/scss/style.scss
@@ -94,6 +94,7 @@ body {
             background-color: #f6f6f6;
 
             @include screen(small-mobile) {
+                position: fixed;
                 height: 110px;
             }
             
@@ -197,8 +198,7 @@ body {
         .categories {
             position: relative;
             margin-top: -4px;
-            width: 100%;
-            height: 71px;
+            @include box(100%, 71px);
             padding: 0;
             background-color: #05aecc;
 
@@ -207,14 +207,13 @@ body {
             }
 
             @include screen(small-mobile) {
-                margin-top: 15px;
+                margin-top: 110px;
             }
             
             ul {
                 display: flex;
                 justify-content: center;
-                width: 100%;
-                height: 100%;
+                @include box(100%, 100%);
                 padding: 0;
                 list-style: none;
 
@@ -793,7 +792,7 @@ body {
             display: flex;
             flex-wrap: wrap;
 
-            @include screen(tablet){
+            @include screen(tablet) {
                 justify-content: space-around;
                 padding-right: 22px;
             }
@@ -890,6 +889,6 @@ body {
 }
 
 // Responsive 
-@include screen(tablet){
+@include screen(tablet) {
     width: 100%;
 }
