--- a/Armata/scss/components.scss
+++ b/Armata/scss/components.scss
@@ -130,14 +130,27 @@
 	}
 
 	.form {
+		padding-left: 15px;
 		margin-top: 6px;
 		@include box(100%, 47px);
+		font-size: 1em;
 		box-shadow: inset 0 3px 0 rgba(0, 0, 0, 0.4);
+		transition: all 0.3s ease;
+
+		&:focus {
+			box-shadow: inset 0 3px 0 rgba($color: $gold, $alpha: 1);
+		}
 	}
 
 	input[type="submit"] {
 		margin: 0 auto;
 		margin-top: 32px;
+		transition: all 0.3s ease;
+
+		&:active {
+			background-color: #4caf50;
+			border-bottom-color: #2e7d32;
+		}
 	}
 }
 
@@ -159,6 +172,7 @@
 	}
 
 	.form {
+		color: #ffffff;
 		background-color: #34465a;
 	}
 }
@@ -181,6 +195,7 @@
 	}
 
 	.form {
+		color: #000000;
 		background-color: #c0c0c0;
 	}
 }
