--- a/Garlico/scss/sections/delivery.scss
+++ b/Garlico/scss/sections/delivery.scss
@@ -24,7 +24,7 @@
                 right: -63px;
                 top: 0;
                 @include box(126px, 12px);
-                background-image: url("../../img/SVG files/circles.svg");
+                background-image: url("../img/SVG files/circles.svg");
             }
         }
 
