--- a/Garlico/scss/sections/header.scss
+++ b/Garlico/scss/sections/header.scss
@@ -1,7 +1,7 @@
 header {
     position: relative;
     @include box(100%, auto);
-    background-image: url("../../img/garlics1.png");
+    background-image: url("../img/garlics1.png");
     background-size: cover;       
     padding-bottom: 40px;
 
