--- a/Garlico/scss/sections/about-us.scss
+++ b/Garlico/scss/sections/about-us.scss
@@ -19,7 +19,7 @@
     }
 
     .box {
-        background-image: url("../../img/about-us-green.png");
+        background-image: url("../img/about-us-green.png");
         background-size: cover;
     }
 
