--- a/Garlico/scss/sections/map.scss
+++ b/Garlico/scss/sections/map.scss
@@ -4,7 +4,7 @@
 
     .bg-map {
         @include box(100%);
-        background-image: url("../../img/map.png");
+        background-image: url("../img/map.png");
         background-size: cover;
         background-position: 20%;
     }
