--- a/Garlico/scss/sections/delivery.scss
+++ b/Garlico/scss/sections/delivery.scss
@@ -2,7 +2,7 @@
     margin-top: 50px;
     padding-top: 70px;
     @include box(100%, 660px);
-    background-image: url("../../img/delivery_bg.png");
+    background-image: url("../img/delivery_bg.png");
     background-size: cover;
     background-position: center;
 
