--- a/A-stroy/scss/components.scss
+++ b/A-stroy/scss/components.scss
@@ -71,10 +71,10 @@
 
 // Main title
 .main-title {
-    margin-top: 35px;
+    margin-top: 14px;
     color: $dark;
-    font-family: "Roboto-Bold";
-    font-size: em(36px);
+    font-family: "RobotoSlab", sans-serif;
+    font-size: em(37px);
     font-weight: 700;
 }
 
