--- a/fucking-menu/scss/_media.scss
+++ b/fucking-menu/scss/_media.scss
@@ -23,7 +23,7 @@
                 align-items: flex-start;
                 height: 100vh;
                 background-color: #616161;
-                overflow-y: scroll;
+                overflow-y: auto;
 
                 li {
                     margin-left: 0;
