--- a/Nanonasibulin/scss/pages/components.scss
+++ b/Nanonasibulin/scss/pages/components.scss
@@ -1,10 +1,25 @@
 // Components
 .wrapper {
-	margin-top: 30px;
+	margin: 30px 0;
 	width: 1180px;
 	background: #fff;
 	overflow: hidden;
 	box-shadow: 0 5px 8px rgba(0, 0, 0, 0.25);
+}
+
+// Copyright-line
+.copyright-line {
+	@include flexbox(center, center);
+	@include box(100%, auto);
+	padding: 15px;
+	color: #ffffff;
+	font-size: em(14px);
+	font-weight: 300;
+	background-color: #444444;
+
+	.bold {
+		font-weight: 700;
+	}
 }
 
 // Employers
