--- a/Nanonasibulin/scss/pages/home.scss
+++ b/Nanonasibulin/scss/pages/home.scss
@@ -249,6 +249,8 @@
 // Our position
 .our-position {
 	width: 100%;
+	display: flex;
+	flex-direction: column;
 
 	#map-block {
 		margin-top: 40px;
@@ -258,7 +260,7 @@
 	.yandex-maps-btn {
 		margin: 0 auto;
 		margin-top: 25px;
-		@include flexbox();
+		display: inline-flex;
 		padding: 13px 30px;
 		background: $blue;
 		color: #fff;
