--- a/Nanonasibulin/scss/_fonts.scss
+++ b/Nanonasibulin/scss/_fonts.scss
@@ -1,3 +1,3 @@
 @include font-face("Myriad Pro", "../fonts/MyriadPro/MYRIADPRO-REGULAR.OTF");
-@include font-face("Roboto", "../fonts/RobotoRegular/RobotoRegular");
-@include font-face("RobotoBold", "../fonts/RobotoBold/RobotoBold", bold);
+@include font-face("Roboto", "../fonts/RobotoRegular/RobotoRegular.woff");
+@include font-face("RobotoBold", "../fonts/RobotoBold/RobotoBold.woff");
