--- a/Nanonasibulin/scss/pages/home.scss
+++ b/Nanonasibulin/scss/pages/home.scss
@@ -13,7 +13,7 @@
 		padding-top: 23px;
 		padding-left: 22px;
 		padding-right: 25px;
-		background: url("../../img/slider-bg.png") right center no-repeat;
+		background: url("../img/slider-bg.png") right center no-repeat;
 		background-size: cover;
 
 		.text-wrap {
