--- a/Nanonasibulin/scss/mixins.scss
+++ b/Nanonasibulin/scss/mixins.scss
@@ -4,7 +4,7 @@
         // src: url("#{$file}.eot");
         // src: url("#{$file}.eot?#iefix") format("embedded-opentype"),
         // url("#{$file}.woff") format("woff"),
-        src: url("#{$file}") format("truetype");
+        src: url("#{$file}");
         // url("#{$file}.svg?#webfont") format("svg");
     }
 }
