--- a/i-shop/css/custom-style.css
+++ b/i-shop/css/custom-style.css
@@ -165,6 +165,35 @@
     background-size: auto 160%;
 }
 
+/* Bottom line */
+.category-item.product .bottom-line {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.category-item.product .bottom-line .view-btn {
+    margin: 0;
+}
+
+.category-item.product .cart-btn {
+    margin-right: 15px;
+}
+
+.category-item.product .cart-btn:hover {
+    background-color: #f57f17;
+}
+
+@media (max-width: 390px) {
+    .category-item.product .bottom-line {
+        flex-direction: column-reverse;
+        align-items: flex-end;
+    }
+
+    .category-item.product .cart-btn {
+        margin-right: 0;
+        margin-top: 15px;
+    }
+}
 
 /* Responsive */
 @media (max-width: 980px) {
