--- a/NIINM/scss/_media.scss
+++ b/NIINM/scss/_media.scss
@@ -93,6 +93,7 @@
 		margin-top: 50px;
 
 		&-items {
+			margin: 0;
 			flex-direction: column;
 			align-items: center;
 		}
@@ -315,6 +316,8 @@
 
 		&-item {
         	width: 100%;
+        	background-size: cover;
+        	background-position: center center;
 
         	&__title {
         		font-size: em(40px);
