--- a/NIINM/scss/reset.scss
+++ b/NIINM/scss/reset.scss
@@ -18,7 +18,7 @@ ul {
 }
 
 a {
-    color: #000000;
+    // color: #000000;
     text-decoration: none;
     outline: none;
     word-break: break-word;
