--- a/NIINM/scss/reset.scss
+++ b/NIINM/scss/reset.scss
@@ -8,7 +8,7 @@
 }
 
 body {
-    // overflow-x: hidden;
+    overflow-x: hidden;
     font-family: "Geometria";
     background-color: #fff;
 }
@@ -18,10 +18,8 @@ ul {
 }
 
 a {
-    // color: #000000;
     text-decoration: none;
     outline: none;
-    word-break: break-word;
 }
 
 input, textarea{
