--- a/NIINM/scss/sections/components.scss
+++ b/NIINM/scss/sections/components.scss
@@ -146,7 +146,7 @@ section.page-title {
 
 //* Card block
 .card-block {
-    @include flexbox(flex-start, center);
+    @include flexbox(space-between, center);
     padding: 0 70px;
 
     &.right {
