--- a/Paulls/scss/_media.scss
+++ b/Paulls/scss/_media.scss
@@ -88,7 +88,8 @@
 	//! Section-card
 	.section-card {
 		padding: 0 10px;
-		background-image: none !important;
+		background-position: 200%;
+		// background-image: none !important;
 
 		// Row
 		.row {
