--- a/Paulls/scss/_fonts.scss
+++ b/Paulls/scss/_fonts.scss
@@ -1,5 +1,1 @@
-// Cochin
-@include font-face("Cochin", "../fonts/Cochin/Cochin");
-
-// 20db
-@include font-face("20db", "../fonts/20db/20db");
+@include font-face("Helvetica", "../fonts/HelveticaNeueThin/HelveticaNeueCyr-Thin");
