--- a/Paulls/scss/_libs.scss
+++ b/Paulls/scss/_libs.scss
@@ -1,6 +1,6 @@
-// Bootstrap
 @import "../css_libs/bootstrap/scss/bootstrap-grid.scss";
 @import "../css_libs/bootstrap/scss/utilities/_sizing.scss";
 
-// Fullpage
-@import "../css_libs/fullPage/fullpage";
+// Slick
+@import "../css_libs/slick/slick.scss";
+@import "../css_libs/slick/slick-theme.scss";
