--- a/Paulls/scss/_vars.scss
+++ b/Paulls/scss/_vars.scss
@@ -1,14 +1,13 @@
-$default-font: "roboto-example", sans-serif;
+$default-font: "Helvetica", sans-serif;
 $accent: orange;
 $text: #333;
-$pink: #E5C4B8;
-$white-light: #FBFBFB;
-$dark: #373737;
+$purple: #7D0D36;
+$light-gold: #efe3ae;
 
 // Customization Bootstrap vars from "app/libs/bootstrap/scss/_variables.scss"
 $grid-gutter-width: 30px;
 $grid-columns: 12;
 $grid-breakpoints: (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px);
-$container-max-widths: (sm: 540px, md: 720px, lg: 960px, xl: 1420px);
+$container-max-widths: (sm: 540px, md: 720px, lg: 960px, xl: 1170px);
 
 $gutter: $grid-gutter-width;
