--- a/Paulls/scss/reset.scss
+++ b/Paulls/scss/reset.scss
@@ -4,8 +4,7 @@
     border: 0;
     box-sizing: border-box !important;
     outline: none;
-    font-family: "Cochin", sans-serif;
-    word-break: break-word;
+    font-family: "Helvetica", sans-serif;
 }
 
 body {
@@ -21,7 +20,7 @@ a {
     color: #000000;
     text-decoration: none;
     outline: none;
-    transition: all .3s ease;
+    word-break: break-word;
 }
 
 input, textarea{
@@ -33,4 +32,8 @@ button {
     border: none;
     cursor: pointer;
     outline: none !important;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    color: #444444;
 }
